Added command to party invite messages