@@ -61,7 +61,7 @@ public class ArenaDuplicatesMenu extends Menu {
             });
         }
 
-        buttons.add(new DisplayButton(getSize() - 4, Material.LIME_DYE, "&aAdd Duplicate", Arrays.asList("&7Click to create additional copies of this arena"), p -> {
+        buttons.add(new DisplayButton(getSize() - 4, Material.LIME_DYE, "&aAdd Duplicate", List.of("&7Click to create additional copies of this arena"), p -> {
             p.closeInventory();
             SignInputMenu.open(p, "", "Amount of duplicates (max 36)", input -> {
                 final int amount;
@@ -96,7 +96,7 @@ public class ArenaDuplicatesMenu extends Menu {
             });
         }));
 
-        buttons.add(new DisplayButton(getSize() - 6, Material.EMERALD, "&aRecopy Duplicates", Arrays.asList("&7Click to repaste all duplicate copies of this arena"), p -> {
+        buttons.add(new DisplayButton(getSize() - 6, Material.EMERALD, "&aRecopy Duplicates", List.of("&7Click to repaste all duplicate copies of this arena"), p -> {
             if (!ArenaDuplicator.isAvailable()) {
                 p.sendMessage(CC.error("FastAsyncWorldEdit is not installed."));
                 return;
